Fixed gap on footer

--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -375,6 +375,11 @@ footer > div {
 	.footer-important-links {
 		display: flex;
 		justify-content: center;
+		align-items: center;
+	}
+
+	.g-15 {
+		gap: 15px;
 	}
 }
 
